Added search + new data + basic HTML/CSS

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
-<html>    
-<body>
-    <h1>  <h1\>
-
-
-</body>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>PhishNet</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="{{ url_for('static', filename='index.css') }}">
+    </head>
+    <body>
+        <div class="header"> 
+            <h1> PhishNet </h1>
+            <input type="text" placeholder="Search..">
+        </div>
+    </body>
 </html>
