--- a/static/index.css
+++ b/static/index.css
@@ -1,10 +1,35 @@
 .header {
     text-align: center;
     margin-bottom: 200px;
+    font-size: 32px;
 }
 
 body {
-    background-color: lightgrey;
-    opacity: .5;
-    z-scale: 
+    background-color: lightsteelblue;
+    z-index: -30;
+}
+
+.search {
+    border-radius: 25px;
+    width: 350px;
+    height: 20px;
+    padding: 10px 15px 10px 15px;
+    border-width: 1px;
+    font-size: 16px;
+    border-color: black;
+
+}
+
+.box {
+    display: flex;
+    width: 500px;
+    height: 400px;
+    background-color: white;
+    border-radius: 25px;
+    text-align: center;
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    position: flex
 }
