--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,10 @@
     <body>
         <div class="header"> 
             <h1> PhishNet </h1>
-            <input type="text" placeholder="Search..">
+            <input class="search" type="text" placeholder="Search..">
+        </div>
+        <div class="box">
+            <h1> hello bob, you are not being scammed right now </h1>
         </div>
     </body>
 </html>
