--- a/static/index.css
+++ b/static/index.css
@@ -13,23 +13,26 @@ body {
     border-radius: 25px;
     width: 350px;
     height: 20px;
-    padding: 10px 15px 10px 15px;
+    padding: 10px 20px 10px 20px;
     border-width: 1px;
     font-size: 16px;
     border-color: black;
+}
 
+#box-container {
+    display: flex;
+    justify-content: center;
+    margin-top: -40px;
+    
 }
 
 .box {
-    display: flex;
-    width: 500px;
-    height: 400px;
+    width: 600px;
+    height: 300px;
     background-color: white;
     border-radius: 25px;
     text-align: center;
-    margin-left: 15px;
-    margin-right: 15px;
-    margin-top: 15px;
-    margin-bottom: 15px;
-    position: flex
+    margin-bottom: 100px;
+    padding: 10px;
+    border-color: black;
 }
