--- a/templates/index.html
+++ b/templates/index.html
@@ -10,10 +10,14 @@
     <body>
         <div class="header"> 
             <h1> PhishNet </h1>
-            <input class="search" type="text" placeholder="Search..">
+            <form action='/search'>
+                <input name="search-input" class="search" type="text" placeholder="Enter an email or phone number..." autocomplete="off">
+            </form>
         </div>
-        <div class="box">
-            <h1> hello bob, you are not being scammed right now </h1>
+        <div id="box-container">
+            <div class="box">
+                <h1> hello bob, you are not being scammed right now </h1>
+            </div>
         </div>
     </body>
 </html>
